# Snaps

./: .dockerignore  .env  .env.example  .gitignore  README.md  SETUP_GUIDE.md  SnapsAI.py  app_v1.py  main.py  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: deploy.yml
.vercel/: project.json
app/: __init__.py  config.py  main.py  requirements.txt
app/api/routes/: __init__.py  auth.py  content.py  content_conversion.py  content_management.py  instagram.py  statistics.py  thread.py  unlink.py
app/auth/: dependencies.py  oauth.py
app/models/: schemas.py
app/services/: __init__.py  ai.py  instagram.py  snaps.py  supabase.py  thread.py
app/utils/: ssl_config.py
app/utils/data/: platform_knowledge.json
app/utils/data/rag_data/: social_media_guidelines.json
data_generator/: README.md  post.py  reels.py  story.py
migrations/: create_platform_tokens.sql  create_user_connections.sql
static/css/: auth.css  style.css
static/js/: auth.js  main.js  mypage.js
templates/: 404.html  500.html  base.html  content_conversion.html  content_management.html  converter.html  index.html  instagram_converter.html  layout.html  login.html  my_page.html  privacy_policy.html  register.html  statistics.html
tests/: test_ai.py  test_content.py  test_instagram.py  test_snaps.py  test_supabase.py  test_thread.py
