[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaps"
version = "1.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Social Media Content Management API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "supabase",
    "python-multipart",
    "jinja2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = [
    "app/**/*.py",
    "app/**/*.html",
    "static/**/*",
    "templates/**/*"
] 